--- a/build.xml
+++ b/build.xml
@@ -21,6 +21,8 @@
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
     </path>
 
+    <copy file="${src}/UKLights.jpeg" tofile="${build}/UKLights.jpeg"/>
+
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
           <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath"/>
@@ -37,6 +39,7 @@
 
     <target name="run" depends="jar">
             <java fork="true" classname="${main-class}">
+            <arg value="192.168.1.103"/>
                 <classpath>
                     <path refid="classpath"/>
                     <path location="${jar.dir}/${ant.project.name}.jar"/>
