--- a/src/breslin/vserver/CMakeLists.txt
+++ b/src/breslin/vserver/CMakeLists.txt
@@ -143,6 +143,8 @@ set(HDRS
 	
 	#command
 	../serverside/command/command.h
+		#tag
+	../serverside/command/commandTag.h
 	
 	#message
 	../serverside/message/message.h
@@ -212,6 +214,8 @@ set(SRCS
 	
 	#command
 	../serverside/command/command.cpp
+		#tag
+	../serverside/command/commandTag.cpp
 	
 	#message
 	../serverside/message/message.cpp
@@ -291,6 +295,8 @@ set(HDRS
 	
 	#command
 	../serverside/command/command.h
+		#tag
+	../serverside/command/commandTag.h
 	
 	#message
 	../serverside/message/message.h
@@ -359,6 +365,8 @@ set(SRCS
 	
 	#command
 	../serverside/command/command.cpp
+		#tag
+	../serverside/command/commandTag.cpp
 	
 	#message
 	../serverside/message/message.cpp
