ai players work like a charm for tag. some reason the human doesn't show that he is it visually though he can transfer it to someone else.

--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -118,6 +118,7 @@ set(HDRS
 	../clientside/game/BaseApplication.h
 	../clientside/game/application.h
 	../clientside/game/game.h
+	../clientside/game/gameTag.h
 	
 	#dreamsock
 	../clientside/tdreamsock/dreamSockLog.h
@@ -169,6 +170,7 @@ set(SRCS
 	../clientside/game/BaseApplication.cpp
 	../clientside/game/application.cpp
 	../clientside/game/game.cpp
+	../clientside/game/gameTag.cpp
 	
 	#dreamsock
 	../clientside/tdreamsock/dreamSockLog.cpp
@@ -229,6 +231,7 @@ set(HDRS
 	../clientside/game/BaseApplication.h
 	../clientside/game/application.h
 	../clientside/game/game.h
+	../clientside/game/gameTag.h
 	
 	#dreamsock
 	../clientside/tdreamsock/dreamSockLog.h
@@ -279,6 +282,7 @@ set(SRCS
 	../clientside/game/BaseApplication.cpp
 	../clientside/game/application.cpp
 	../clientside/game/game.cpp
+	../clientside/game/gameTag.cpp
 	
 	#dreamsock
 	../clientside/tdreamsock/dreamSockLog.cpp
