--- a/src/breslin/vclient/CMakeLists.txt
+++ b/src/breslin/vclient/CMakeLists.txt
@@ -126,6 +126,7 @@ set(HDRS
 	../clientside/application/states/applicationPlay.h
 	../clientside/application/states/applicationGlobal.h
 	../clientside/application/states/applicationInitialize.h
+	../clientside/application/states/applicationInitializeGraphics.h
 	
 	#game	
 	../clientside/game/game.h
@@ -184,6 +185,7 @@ set(SRCS
 	../clientside/application/states/applicationPlay.cpp
 	../clientside/application/states/applicationGlobal.cpp
 	../clientside/application/states/applicationInitialize.cpp
+	../clientside/application/states/applicationInitializeGraphics.cpp
 	
 	#game	
 	../clientside/game/game.cpp
@@ -256,6 +258,7 @@ set(HDRS
 	../clientside/application/states/applicationPlay.h
 	../clientside/application/states/applicationGlobal.h
 	../clientside/application/states/applicationInitialize.h
+	../clientside/application/states/applicationInitializeGraphics.h
 	
 	#game
 	../clientside/game/game.h
@@ -313,6 +316,7 @@ set(SRCS
 	../clientside/application/states/applicationPlay.cpp
 	../clientside/application/states/applicationGlobal.cpp
 	../clientside/application/states/applicationInitialize.cpp
+	../clientside/application/states/applicationInitializeGraphics.cpp
 
 	#game	
 	../clientside/game/game.cpp
